--- a/finance/stock.ipynb
+++ b/finance/stock.ipynb
@@ -4,118 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pythonで株価データを取得する  \n",
-    "https://myfrankblog.com/how_to_get_stock_price_with_python/#i-5"
+    "参考ページ：https://myfrankblog.com/how_to_get_stock_price_with_python/#i-5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Adj Close</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-07-21</th>\n",
-       "      <td>10400.0</td>\n",
-       "      <td>10225.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>10335.0</td>\n",
-       "      <td>973400.0</td>\n",
-       "      <td>9447.289062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-07-24</th>\n",
-       "      <td>10395.0</td>\n",
-       "      <td>10270.0</td>\n",
-       "      <td>10310.0</td>\n",
-       "      <td>10375.0</td>\n",
-       "      <td>945600.0</td>\n",
-       "      <td>9483.853516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-07-25</th>\n",
-       "      <td>10545.0</td>\n",
-       "      <td>10385.0</td>\n",
-       "      <td>10390.0</td>\n",
-       "      <td>10495.0</td>\n",
-       "      <td>1366500.0</td>\n",
-       "      <td>9593.544922</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-07-26</th>\n",
-       "      <td>10855.0</td>\n",
-       "      <td>10255.0</td>\n",
-       "      <td>10850.0</td>\n",
-       "      <td>10320.0</td>\n",
-       "      <td>2327800.0</td>\n",
-       "      <td>9433.577148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-07-27</th>\n",
-       "      <td>10415.0</td>\n",
-       "      <td>10230.0</td>\n",
-       "      <td>10300.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>1533700.0</td>\n",
-       "      <td>9360.449219</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               High      Low     Open    Close     Volume    Adj Close\n",
-       "Date                                                                  \n",
-       "2017-07-21  10400.0  10225.0  10240.0  10335.0   973400.0  9447.289062\n",
-       "2017-07-24  10395.0  10270.0  10310.0  10375.0   945600.0  9483.853516\n",
-       "2017-07-25  10545.0  10385.0  10390.0  10495.0  1366500.0  9593.544922\n",
-       "2017-07-26  10855.0  10255.0  10850.0  10320.0  2327800.0  9433.577148\n",
-       "2017-07-27  10415.0  10230.0  10300.0  10240.0  1533700.0  9360.449219"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pandas_datareader import data\n",
@@ -341,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -355,12 +251,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1d926f01cebdfdfc777b18769c35f7e8ac358b1987017ea5f0103eb23236bd9"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
