--- a/finance/stock.ipynb
+++ b/finance/stock.ipynb
@@ -11,7 +11,110 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-07-21</th>\n",
+       "      <td>10400.0</td>\n",
+       "      <td>10225.0</td>\n",
+       "      <td>10240.0</td>\n",
+       "      <td>10335.0</td>\n",
+       "      <td>973400.0</td>\n",
+       "      <td>9447.288086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-24</th>\n",
+       "      <td>10395.0</td>\n",
+       "      <td>10270.0</td>\n",
+       "      <td>10310.0</td>\n",
+       "      <td>10375.0</td>\n",
+       "      <td>945600.0</td>\n",
+       "      <td>9483.852539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-25</th>\n",
+       "      <td>10545.0</td>\n",
+       "      <td>10385.0</td>\n",
+       "      <td>10390.0</td>\n",
+       "      <td>10495.0</td>\n",
+       "      <td>1366500.0</td>\n",
+       "      <td>9593.544922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-26</th>\n",
+       "      <td>10855.0</td>\n",
+       "      <td>10255.0</td>\n",
+       "      <td>10850.0</td>\n",
+       "      <td>10320.0</td>\n",
+       "      <td>2327800.0</td>\n",
+       "      <td>9433.578125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-27</th>\n",
+       "      <td>10415.0</td>\n",
+       "      <td>10230.0</td>\n",
+       "      <td>10300.0</td>\n",
+       "      <td>10240.0</td>\n",
+       "      <td>1533700.0</td>\n",
+       "      <td>9360.449219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               High      Low     Open    Close     Volume    Adj Close\n",
+       "Date                                                                  \n",
+       "2017-07-21  10400.0  10225.0  10240.0  10335.0   973400.0  9447.288086\n",
+       "2017-07-24  10395.0  10270.0  10310.0  10375.0   945600.0  9483.852539\n",
+       "2017-07-25  10545.0  10385.0  10390.0  10495.0  1366500.0  9593.544922\n",
+       "2017-07-26  10855.0  10255.0  10850.0  10320.0  2327800.0  9433.578125\n",
+       "2017-07-27  10415.0  10230.0  10300.0  10240.0  1533700.0  9360.449219"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pandas_datareader import data\n",
