--- a/chemistry/dsc_format/dsc_format.ipynb
+++ b/chemistry/dsc_format/dsc_format.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ec057438",
+   "metadata": {},
+   "source": [
+    "# 日立製 示差走査熱量測定（DSC）の出力ファイルを処理\n",
+    "数値データ部分のみを抽出\n",
+    "excelファイルからcsvに変換してigorなどで読み込みやすくする"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "7d8af802-f769-47e6-bc5d-3c13439eca27",
    "metadata": {},
    "outputs": [
@@ -218,7 +228,7 @@
        "[16290 rows x 10 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +236,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename = 'research/Program/DSC_analysis/dsc_raw_data.xlsx'\n",
+    "filename = 'dsc_raw_data.xlsx'\n",
     "df = pd.read_excel(filename)\n",
     "\n",
     "start_point = 0\n",
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "144b82c6-024f-43f1-baf3-bcd54866b488",
    "metadata": {},
    "outputs": [
@@ -373,7 +383,7 @@
        "[16290 rows x 4 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "3ef839fb-2820-42c0-b21c-c089865f5be3",
    "metadata": {},
    "outputs": [],
@@ -396,7 +406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -411,6 +421,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
