--- a/practice/test.ipynb
+++ b/practice/test.ipynb
@@ -2,30 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (<string>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"c:\\Users\\ktkd9\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3437\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-2d0dc9d19822>\"\u001b[1;36m, line \u001b[1;32m2\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    eval(str)\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<string>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    1+01\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "return_oneの実行\n",
+      "開始: 2022-07-27 10:35:50.257926\n",
+      "修了: 2022-07-27 10:35:50.258023\n",
+      "実行結果: 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "str = '-'\n",
-    "eval(str)"
+    "from datetime import datetime as dt\n",
+    "\n",
+    "def my_logger(func):\n",
+    "    def _wrapper(*args, **kwargs):\n",
+    "        print(f'{func.__name__}の実行')\n",
+    "        print(f'開始: {dt.now()}')\n",
+    "\n",
+    "        res = func(*args, **kwargs)\n",
+    "\n",
+    "        print(f'修了: {dt.now()}')\n",
+    "        print(f'実行結果: {res}')\n",
+    "\n",
+    "        return res\n",
+    "    return _wrapper\n",
+    "\n",
+    "\n",
+    "@my_logger\n",
+    "def return_one():\n",
+    "    return 1\n",
+    "\n",
+    "\n",
+    "return_one()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -39,12 +68,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1d926f01cebdfdfc777b18769c35f7e8ac358b1987017ea5f0103eb23236bd9"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
